# MCEL

./: CMakeLists.txt  MCEL.sln  README.md
.github/: SECURITY.md
.github/workflows/: build.yml  codeql-analysis.yml
MCEL/: domain.c  mcel.h
MCEL Test/: functions_test.h  mcel_test.vcxproj
MCEL/Saved/: udil.c  udil.h
MCLR/: MCLR.vcxproj  MCLR.vcxproj.filters  mclr.c
Source/: MCEL.sln
Source/MCEL/: MCEL.vcxproj  MCEL.vcxproj.filters  anchor.c  anchor.h  domain.c  domain.h  doxymain.h  index.c  index.h  mcel.c  mcel.h  mcelcommon.h  merkle.c  merkle.h  proof.c  proof.h  query.c  query.h
Source/MCELTest/: functions_test.c  functions_test.h  mcel_test.c  mcel_test.vcxproj.filters  mceltestcommon.h
Source/MCLR/: MCLR.vcxproj  (+5 more)
docs/: anchor_8h.html  anchor_8h.js  anchor_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_04efafefd424c41126d2eca9fcbeac3c.html  dir_04efafefd424c41126d2eca9fcbeac3c.js  dir_a67ed08acaa25d7258ed1163343addc3.html  dir_a67ed08acaa25d7258ed1163343addc3.js  domain_8h.html  domain_8h.js  domain_8h_source.html  doxygen_crawl.html  doxymain_8h_source.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  group__mcel__block.html  group__mcel__checkpoint.html  group__mcel__core.html  group__mcel__merkle.html  group__mcel__record.html  group__mcel__store.html  index.html  index.js  mcel_8h.html  mcel_8h.js  mcel_8h_source.html  mcelcommon_8h_source.html  merkle_8h.html  merkle_8h.js  merkle_8h_source.html  navtreedata.js  (+23 more)
(+38 files in other folders)
